--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button id="clickme" onclick="visitPage();">Click me!</button>
     </div>
     <div class="footer">
-        <p>Created by Nabilah Qurratunisa</p>
+        <p>Copyright © 2021 Nabilah Qurratunisa</p>
     </div>
 
     <script src="script.js"></script>
