--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="box" id="7"></div>
             <div class="box" id="8"></div>
         </div>
-        <h2 id="intro">Catch Me!</h2>
+        <h2 id="intro">Cilck the Sushi Girl!</h2>
         <button id="restart">Restart!</button>
         <br>
-        <button id="clickme" onclick="visitPage();">Click me!</button>
+        <button id="clickme" onclick="visitPage();">About me!</button>
     </div>
     <div class="footer">
         <p>Copyright © 2021 Nabilah Qurratunisa</p>
